5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1836_2603.log
== TEST (2019-07-01 09:48:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4)dtype=int)

for j in range(mat):
	for i in range(mat):
		aux[i,j] = sorted(aux,reverse=True)
print(aux)




-- ERROR:
File "XXXX", line 6
    aux = zeros((4,4)dtype=int)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:49:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros(((4,4))dtype=int)

for j in range(mat):
	for i in range(mat):
		aux[i,j] = sorted(aux,reverse=True)
print(aux)




-- ERROR:
File "XXXX", line 6
    aux = zeros(((4,4))dtype=int)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:50:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(mat):
	for i in range(mat):
		aux[i,j] = sorted(aux,reverse=True)
print(aux)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:51:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat):
	for i in range(size(mat)):
		aux[i,j] = sorted(aux,reverse=True)
print(aux)




-- ERROR:
File "XXXX", line 8
    for j in range(size(mat):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:51:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux[i,j] = sorted(aux,reverse=True)
print(aux)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:51:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux[i,j] = sorted(mat,reverse=True)
print(aux)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:53:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux[i,j] = sorted(mat,reverse=True)
print(matriz)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:53:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux= sorted(mat,reverse=True)
print(matriz)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:17:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux= sorted(aux,reverse=True)
print(matriz)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:17:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux = zeros((4,4),dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux= sorted(aux,reverse=True)
print(matriz)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:18:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

auxj = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		auxj= sorted(auxj,reverse=True)
print(matriz)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:18:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

auxj = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		auxj= sorted(auxj,reverse=True)
print(mat)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:18:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

auxj = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		auxj= sorted(mat,reverse=True)
print(mat)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:19:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

auxj = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		mat= sorted(mat,reverse=True)
print(mat)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:19:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

auxj = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		auxj= sorted(auxj,reverse=True)
print(auxj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:24:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(4,dtype=int)
aux2 = zeros(4,dtype=int)
aux3 = zeros(4,dtype=int)
aux4 = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		mat[i,j] = auxj
		auxj= sorted(auxj,reverse=True)
print(auxj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:26:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(4,dtype=int)
aux2 = zeros(4,dtype=int)
aux3 = zeros(4,dtype=int)
aux4 = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		mat[i,j] = aux1
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:26:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(4,dtype=int)
aux2 = zeros(4,dtype=int)
aux3 = zeros(4,dtype=int)
aux4 = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		mat[i,j] = aux1
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:05:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		 aux1[j] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
File "XXXX", line 11
    aux1= sorted(aux1,reverse=True)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:05:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(4,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux1[j] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:06:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(7,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux1[j] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:06:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(7,dtype=int)

for j in range(size(mat)):
	for i in range(size(mat)):
		aux1[i] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:07:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(7,dtype=int)

for i in range(7):
	for j in range(size(shape[1])):
		aux1[i] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:07:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(7,dtype=int)

for i in range(7):
	for j in range(size(shape(mat)[1])):
		aux1[i] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:08:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

aux1 = zeros(7,dtype=int)

for i in range(7):
	for j in range(size(shape(mat)[1])):
		aux1[j] = mat[:,j]
		aux1= sorted(aux1,reverse=True)
		print(aux1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:12:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= mat[j,:]
	print(vet)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:22:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[0],dtype=int)

x = mat[0,1]

x = sorted(x, reverse=True)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:23:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[0],dtype=int)

x = mat[:,1]

x = sorted(x, reverse=True)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:26:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[0],dtype=int)
x = mat[:,0]
a = mat[:,1]
b = mat[:,2]
c = mat[:,3]
x = sorted(x, reverse=True)
a = sorted(a, reverse=True)
b = sorted(b, reverse=True)
c = sorted(c, reverse=True)
print(x,a,b,c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:28:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[0],dtype=int)
x = mat[:,0]
a = mat[:,1]
b = mat[:,2]
c = mat[:,3]
x = sorted(x, reverse=True)
a = sorted(a, reverse=True)
b = sorted(b, reverse=True)
c = sorted(c, reverse=True)
print([[x],[a],[b],[c]])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:36:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

x = mat[:,0]
a = mat[:,1]
b = mat[:,2]
c = mat[:,3]
x = sorted(x, reverse=True).T
a = sorted(a, reverse=True)
b = sorted(b, reverse=True)
c = sorted(c, reverse=True)
print([[x],[a],[b],[c]])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:37:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

x = mat[:,0].T
a = mat[:,1]
b = mat[:,2]
c = mat[:,3]
x = sorted(x, reverse=True)
a = sorted(a, reverse=True)
b = sorted(b, reverse=True)
c = sorted(c, reverse=True)
print([[x],[a],[b],[c]])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:37:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

x = mat[:,0].T
a = mat[:,1].T
b = mat[:,2].T
c = mat[:,3].T
x = sorted(x, reverse=True)
a = sorted(a, reverse=True)
b = sorted(b, reverse=True)
c = sorted(c, reverse=True)
print([[x],[a],[b],[c]])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:39:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for i in range(4)
	x = mat[:,i]
	x = sorted(x, reverse=True)
	print(x)
	


-- ERROR:
File "XXXX", line 5
    for i in range(4)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:40:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for i in range(4):
	x = mat[:,i]
	x = sorted(x, reverse=True)
	print(x)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:40:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for i in range(4):
	x = mat[:,i]
	x = sorted(x, reverse=True)
	print(x.T)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:41:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for i in range(4):
	x = mat[:,i]
	x = sorted(x, reverse=True)
	print(matriz)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:42:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for i in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	print(matriz)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:42:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	print(matriz)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:42:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	print(x)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:44:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = x.T
	print(r)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:46:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = inv(x)
	print(r)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:46:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = dot(inv(x)
	print(r)
	


-- ERROR:
File "XXXX", line 9
    print(r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:47:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = dot(inv(x))
	print(r)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:48:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:54:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = (x.T)
	print(r)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:57:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4)dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = (x.T)
	print(r)


-- ERROR:
File "XXXX", line 3
    m = zeros((4,4)dtype=int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:58:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4)dtype==int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = (x.T)
	print(r)


-- ERROR:
File "XXXX", line 3
    m = zeros((4,4)dtype==int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:59:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	r = (x.T)
	print(r)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:02:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
#	for i range(4):
#		m
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:02:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
#	for i range(4):
#		m
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:02:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
#	for i range(4):
#		m
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:03:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
#	for i range(4):
#		m
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:05:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	for i range(4):
		m[:,i]= x
		print(m)


-- ERROR:
File "XXXX", line 8
    for i range(4):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:05:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	for i in range(4):
		m[:,i]= x
		print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:06:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	for i in range(4):
		m[:,i]= x
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:07:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	xj = sorted(x, reverse=True)
	for i in range(4):
		m[:,i]= xj
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 16:10:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	x = mat[:,j]
	x = sorted(x, reverse=True)
	for i in range(4):
		m[:,i]= x
print(m)


-- EXECUTION TIME:
0.936066
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[3 3 3 3]
 [3 3 3 3]
 [3 3 3 3]
 [3 3 3 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j-1:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j-1:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j-1:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 16:20:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j-1:i]= x
print(m.T)

-- EXECUTION TIME:
1.06003
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 0]
 [3 3 3 0]
 [2 2 2 0]
 [1 1 1 0]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 3 0]
 [3 3 3 0]
 [2 2 3 0]
 [1 1 3 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:20:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j-1:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:21:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:21:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j-1]
		x = sorted(x, reverse=True)
		m[j:i]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:22:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j:i-1]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:22:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j:i+1]= x
print(m.T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 16:22:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = zeros((4,4), dtype=int)
mat = array(eval(input("digite: ")))
for j in range(4):
	for i in range(4):
		x = mat[:,j]
		x = sorted(x, reverse=True)
		m[j:i+1]= x
print(m.T)

-- EXECUTION TIME:
1.24575
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
